testsuite/tests/polykinds/T13393.stderr

T13393.hs:61:3: error:
    • Ambiguous type variable ‘t0’ arising from a use of ‘mapM’
      prevents the constraint ‘(Traversable t0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘t0’ should be.
      These potential instances exist:
        instance Traversable (Either a) -- Defined in ‘Data.Traversable’
        instance Traversable Identity -- Defined in ‘Data.Traversable’
        instance Traversable Maybe -- Defined in ‘Data.Traversable’
        ...plus two others
        ...plus 25 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block:
        mapM putBackLeftOverInputAndReturnOutput undefined
      In the expression:
        do mapM putBackLeftOverInputAndReturnOutput undefined
           undefined
      In an equation for ‘encodeLinearToAac’:
          encodeLinearToAac
            = do mapM putBackLeftOverInputAndReturnOutput undefined
                 undefined
            where
                putBackLeftOverInputAndReturnOutput (MkEncodeResult x)
                  = do leftOvers .= x
                       ....
